examples/errors/plredef.lgt

:- object(plredef).

	% redefinition of a Prolog built-in predicate
	write(_).

:- end_object.

